# algorithmen_und_datenstrukturen

./: Cargo.toml
gcd/src/: lib.rs
list/: list.c  list.h  main
pointer/src/: allocate.rs  lib.rs
queue_for_stack/: Cargo.toml
queue_for_stack/src/: lib.rs
tree/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tree/include/: binary_search_tree.h
tree/src/: binary_search_tree.c
